--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-Login==0.6.3
+Flask>=2.0
+Flask-SQLAlchemy>=2.5
+Flask-Migrate>=3.0
+Flask-Login>=0.5
+python-dotenv>=0.19
+requests>=2.25
+psycopg2-binary>=2.9 # If using PostgreSQL
 Werkzeug==2.3.7
-python-dotenv==1.0.0
-requests==2.31.0
 Pillow==10.1.0
 python-dateutil==2.8.2
-Markdown==3.5
+Markdown>=3.3.6
 gunicorn==21.2.0
 SQLAlchemy==2.0.23
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 alembic==1.12.1
-pytz==2023.3 
+pytz==2023.3
+xhtml2pdf>=0.2.11 
