--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,29 @@ Jinja2==3.1.2
 Mako==1.2.4
 alembic==1.12.1
 pytz==2023.3
-xhtml2pdf>=0.2.11 
+xhtml2pdf>=0.2.11
+bcrypt==4.1.3
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+Deprecated==1.2.14
+dotenv==0.0.5
+email_validator>=2.0
+exceptiongroup==1.2.1
+Flask-Bcrypt>=1.0
+Flask-Limiter==3.6.0
+Flask-WTF>=1.0
+greenlet==3.0.3
+httpx==0.27.0
+importlib-metadata==7.1.0
+MarkupSafe==2.1.5
+openai>=1.0
+pandoc==2.3
+reportlab>=4.0
+SQLAlchemy==2.0.30
+typing_extensions==4.12.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+WTForms==3.1.2
+zipp==3.19.0
+weasyprint>=60 
