--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask>=2.0
-Flask-SQLAlchemy>=2.5
+Flask-SQLAlchemy>=3.0
 Flask-Migrate>=3.0
 Flask-Login>=0.5
 python-dotenv>=0.19
@@ -23,3 +23,4 @@ Flask-Limiter>=3.6.0
 Flask-Bcrypt>=1.0
 reportlab>=4.0
 weasyprint>=60 
+xhtml2pdf>=0.2.11
