--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -44,6 +44,8 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
-      - name: Run Tests
+      - name: Run Tests with debug output
         run: |
-          pytest tests/ -v
+          ls -R
+          pytest --version
+          pytest tests/ -vv --junitxml=test-results.xml
