--- a/production.env
+++ b/production.env
@@ -29,3 +29,8 @@ export STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
 
 # Optional: Sentry Error Monitoring
 export SENTRY_DSN=your-sentry-dsn
+
+# AI Analytics (DeepSeek API for Practice Insights)
+# Sign up at https://platform.deepseek.com to get your API key
+export DEEPSEEK_API_KEY=your-deepseek-api-key-here
+export DEEPSEEK_API_ENDPOINT=https://api.deepseek.com/v1/chat/completions
