Add Stripe live mode setup tools and documentation
- Add comprehensive setup scripts for live Stripe integration
- Add production deployment documentation
- Add live environment template (live.env.template)
- Add pricing update tools for EUR currency
- Add verification scripts for Stripe configuration
- Update .gitignore to prevent committing sensitive live keys
- Ready for production deployment with secure configuration

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ run_with_api_key.sh
 # Ignore SQL dumps
 *.sql
 logs/physiotracker.log.*
+
+# Ignore live environment files with sensitive data
+live.env
+*.env.live
+production.env
